# lmforge

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  fix_corners.py  install.ps1  install.sh
.github/workflows/: build-llamacpp-cuda.yml  ci.yml  e2e.yml  release.yml
data/: draft_pairs.toml  engines.toml
data/catalogs/: exl3.json  gguf.json  gguf.json.deleted  mlx.json  safetensors.json
docs/: INSTALL_LINUX_DEV.md  INSTALL_MACOS_DEV.md  INSTALL_WINDOWS_DEV.md  README.md  product-overview.md
docs/architecture/: ADR-001-engine-tiers.md  ADR-002-engines-endpoint.md  ADR-003-last-errors-surface.md  ADR-004-cuda-variant-pipeline.md  ADR-005-speculative-decoding.md  ADR-006-engine-residency.md  ADR-007-thinking-pipeline.md  ADR-008-pool-residency.md  ADR-009-low-vram-discrete-admission.md  ARCHITECTURE.md
docs/archive/: OMLX_SHARED_SERVER_FINDINGS.md  README.md  THINKING_REFACTOR.md  engine-research-sm120.md  implementation-plan-omlx-adapter.md  plan-v0.2.0-cuda-mtp.md  plan-v0.2.1-vlm-mtp-cuda13.md
docs/dev/: DEV_GUIDE.md  INSTALL_LINUX.md  INSTALL_MACOS.md  INSTALL_WINDOWS.md  OMLX_SHARED_SERVER_FINDINGS.md  RELEASE.md  THINKING_REFACTOR.md
docs/engineering/: ANNUAL_ENGINE_REVIEW.md  PLAN-v0.2.0-cuda-mtp.md  PLAN-v0.2.1-vlm-mtp-cuda13.md  PLAN-v0.4-cuda-mtp.md  R2-ENGINE-ASSETS.md  TEST-v0.2.0-post-tarball.md
docs/explanations/: v0.1_Walkthrough.md
docs/init/: LMForge_SRS.md
docs/postman/: lmforge.postman_collection.json  lmforge.postman_environment.json
docs/temp/: engine_revamp_plan.md
gpu_probe/: main.swift
packaging/winget/: phoenixtb.lmforge.installer.yaml  phoenixtb.lmforge.locale.en-US.yaml  phoenixtb.lmforge.yaml
scripts/: banner.sh  bundle-llamacpp.sh  install-core.ps1  install-core.sh  install-ui.ps1  install-ui.sh  lmforge.ps1  lmforge.sh  uninstall-core.ps1  uninstall-core.sh  uninstall-ui.ps1  uninstall-ui.sh
scripts/lib/: e2e-api.ps1  e2e-api.sh  e2e-defaults.ps1  e2e-defaults.sh  (+3 more)
src/: lib.rs  main.rs
tests/: e2e.sh  integration.rs  multi_model.rs  multi_model_e2e.ps1  multi_model_e2e.sh  storage_apply.rs
ui/: package-lock.json  package.json  vitest.config.ts
ui/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
ui/src-tauri/binaries/: lmforge-gpu-probe-aarch64-apple-darwin
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: lib.rs  main.rs  tray.rs
(+274 files in other folders)
